[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "django-segments"
version = "2024.05.1"
description = "A django package for segments (aka: ranges or intervals)"
authors = ["Jack Linke <jacklinke@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/OmenApps/django-segments"
repository = "https://github.com/OmenApps/django-segments"
documentation = "https://django-segments.readthedocs.io"
packages = [{ include = "django_segments", from = "src" }]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/jacklinke/django-segments/releases"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = ">=4.2"
click = ">=8.1.7"

[tool.poetry.dev-dependencies]
playwright = ">=1.44.0"
pytest-playwright = ">=0.5.0"
psycopg2-binary = ">=2.9.9"
Pygments = ">=2.18.0"
bandit = ">=1.7.8"
black = ">=24.4.2"
coverage = { extras = ["toml"], version = ">=7.5.1" }
darglint = ">=1.8.1"
flake8 = "7.0.0"
flake8-bugbear = ">=24.4.26"
flake8-docstrings = ">=1.7.0"
flake8-rst-docstrings = ">=0.3.0"
furo = ">=2024.5.6"
isort = ">=5.13.2"
nox = ">=2024.4.15"
nox-poetry = ">=1.0.3"
poetry-plugin-export = ">=1.8.0"
pep8-naming = ">=0.14.1"
pre-commit = ">=3.7.1"
pre-commit-hooks = ">=4.6.0"
pytest = ">=8.2.1"
pytest-cov = ">=5.0.0"
pytest-django = ">=4.8.0"
pytest-factoryboy = ">=2.7.0"
pytest-mock = ">=3.14.0"
pyupgrade = ">=3.15.2"
safety = ">=3.2.0"
sphinx = ">=7.3.7"
sphinx-autobuild = ">=2024.4.16"
sphinx-click = ">=6.0.0"
xdoctest = { extras = ["colors"], version = ">=1.1.3" }
myst-parser = { version = ">=3.0.1" }

[tool.black]
line-length = 120
target-version = ["py39", "py310", "py311", "py312"]
force-exclude = '''
(
  .nox
)
'''

[tool.coverage.paths]
source = ["django_segments", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["django_segments", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90
omit = [".nox/*", "tests/*", "**/migrations/*", "**/__init__.py"]

[tool.isort]
profile = "black"
lines_after_imports = 2
extend_skip = [".nox"]
